--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de QR Code</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <!-- Fonte Roboto -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">  
+    <!-- Estilos -->
+        <link rel="stylesheet" href="css/style.css">
+    <!-- Scripts -->
+         <script src="js/script.js" defer></script>
 </head>
 <body>
-    <h1 id="h1-teste">Teste</h1>
+    <div class="container">
+        <header id="qr-header">
+            <h1>Gerador de QR Code</h1>
+            <p>Insira uma URL ou texto, para criar um QR Code</p>
+        </header>
+        <div class="qr-header">
+            <input type="text" placeholder="Digite a URL ou texto...">
+            <button>Gerar QR Code</button>
+        </div>
+        <div class="qr-code">
+            <img src="img/qrcode.png" alt="QR Code">
+        </div>
+    </div>
 </body>
 </html>
