--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h1>Gerador de QR Code</h1>
             <p>Insira uma URL ou texto, para criar um QR Code</p>
         </header>
-        <div class="qr-header">
+        <div class="qr-form">
             <input type="text" placeholder="Digite a URL ou texto...">
             <button>Gerar QR Code</button>
         </div>
-        <div class="qr-code">
+        <div id="qr-code">
             <img src="img/qrcode.png" alt="QR Code">
         </div>
     </div>
